--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 streamlit==1.29.0
-pandas==2.1.3
-numpy==1.26.2
-plotly==5.17.0
+pandas==2.1.4
+numpy==1.26.3
+plotly==5.18.0
 requests==2.31.0
 python-dotenv==1.0.0
 yfinance==0.2.28
-sqlalchemy==2.0.23
+sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
+lxml==4.9.3
+appdirs==1.4.4
+frozendict==2.3.10
+html5lib==1.1
+multitasking==0.0.11
+peewee==3.17.0
+beautifulsoup4==4.12.2
