--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit>=1.29.0
-pandas>=2.1.0
-numpy>=1.26.0
-plotly>=5.18.0
-requests>=2.31.0
-python-dotenv>=1.0.0
-yfinance>=0.2.28
-sqlalchemy>=2.0.0
+streamlit
+pandas
+numpy
+plotly
+requests
+yfinance
